@@ -133,6 +133,10 @@ Library
 - Bug #1565661: in webbrowser, split() the command for the default
   GNOME browser in case it is a command with args.
 
+- Bug #1569790: mailbox.py: Maildir.get_folder() and MH.get_folder()
+  weren't passing the message factory on to newly created Maildir/MH
+  objects.
+
 - Bug #1575506: Single-file mailboxes didn't re-lock properly in
   their flush() method.
 
